# rust_solvers

./: Cargo.toml  input.xml
src/: io_utils.rs  main.rs
src/io_utils/: extract_input.rs
